# smartTerminal

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Containerfile  HANDOFF.md  LICENSE  Makefile  PRIVACY.md  README.md  SECURITY.md  THREAT_MODEL.md  install.sh  pyproject.toml  uninstall.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  rule_request.md
.github/workflows/: ci.yml
baseline/: ENVIRONMENT.txt  README.md  baseline_corpus.jsonl  behavior_snapshot.json  benchmark_baseline.json  unittest_baseline.txt
benchmarks/: cybershell_bench.jsonl
docs/: ARCHITECTURE.md  BENCHMARK_SCHEMA.md  EVALUATION.md  FAISS_LLM_BACKENDS.md  I18N.md  INSTALL_LINUX.md  KALI_SETUP.md  PLATFORM_SUPPORT.md  RELEASE_CHECKLIST.md  RESEARCH_ARTIFACT.md  SECURITY_MODEL.md  SHELL_INTEGRATION.md  USER_MANUAL.md
packaging/: README.md
packaging/debian/: README.md
packaging/homebrew/: cybershell-copilot.rb
scripts/: cybershell.bash  cybershell.zsh
src/cybershell/: __init__.py  __main__.py  alternatives.py  audit.py  backends.py  benchmark.py  cache.py  cli.py  data_loader.py  engine.py  i18n.py  kb.py  models.py  policy.py  risk.py  text.py
src/cybershell/data/: command_kb.json  cybershell_bench.jsonl  guardrail_rules.json  playbooks.json  policies.json
src/cybershell/locale/: en.json
tests/: test_baseline_regression.py  test_cli.py  test_engine.py  test_i18n.py  test_kb.py  test_kb_quality.py  test_risk.py  test_stage1_fixes.py  test_stage2_evasion.py  test_stage3_coverage.py
tools/: baseline_snapshot.py  build_benchmark.py  build_manual_pdf.py
