[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "cybershell-copilot"
dynamic = ["version"]
description = "Offline cybersecurity-aware terminal command assistant with risk scoring and guardrails."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Sumit Sunil Khurpade" }
]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["terminal", "cybersecurity", "linux", "cli", "guardrails", "mitre"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Environment :: Console",
  "Topic :: Security",
  "Topic :: System :: Shells",
]

[project.urls]
Homepage = "https://github.com/waltr0/smartTerminal"
Repository = "https://github.com/waltr0/smartTerminal"
Issues = "https://github.com/waltr0/smartTerminal/issues"
Documentation = "https://github.com/waltr0/smartTerminal/tree/main/docs"

[project.scripts]
cybershell = "cybershell.cli:main"
cshell = "cybershell.cli:main"

[project.optional-dependencies]
research = [
  "faiss-cpu>=1.7.4",
  "numpy>=1.24",
  "sentence-transformers>=2.7",
]
llm = [
  "llama-cpp-python>=0.2.80",
]
dev = [
  "ruff>=0.6",
  "mypy>=1.10",
  "build>=1.2",
  "twine>=5.0",
  "coverage>=7.5",
]

[tool.setuptools.dynamic]
version = { attr = "cybershell.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cybershell = ["data/*.json", "data/*.jsonl", "locale/*.json"]

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["src", "tests", "tools"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]
ignore = ["B008", "SIM105"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.mypy]
python_version = "3.10"
files = ["src/cybershell"]
ignore_missing_imports = true
no_implicit_optional = true
check_untyped_defs = true
